--- a/DiagonalCard/index.html
+++ b/DiagonalCard/index.html
@@ -9,10 +9,16 @@
         min-height: 100vh;
         background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
       }
+      .title {
+        position: fixed;
+        top: 30%;
+        left: 8vw;
+        font-size: 5vw;
+        z-index: 1;
+      }
       .container {
         height: 100vh;
         display: flex;
-        justify-content: center;
         align-items: center;
         justify-content: flex-end;
         overflow: hidden;
@@ -56,6 +62,7 @@
     </style>
   </head>
   <body>
+    <h1 class="title">Diagonal Card</h1>
     <div class="container">
       <div class="diagonal">
         <article class="card">
