--- a/DiagonalCard/index.html
+++ b/DiagonalCard/index.html
@@ -14,7 +14,6 @@
         top: 30%;
         left: 8vw;
         font-size: 5vw;
-        z-index: 1;
       }
       .container {
         height: 100vh;
@@ -27,9 +26,8 @@
         display: flex;
         flex-wrap: wrap;
         max-width: 600px;
-        /*transform: rotateZ(35deg) rotateX(50deg);*/
         transform-origin: center left;
-        transform: perspective(1000px) rotateX(35deg) rotateY(-5deg) rotateZ(25deg);
+        transform: skew(-35deg, 20deg);
       }
       .card {
         color: #333;
