--- a/DiagonalCard/index.html
+++ b/DiagonalCard/index.html
@@ -49,9 +49,9 @@
         transition-duration: 0.5s;
         cursor: pointer;
       }
-      .card:nth-child(4) {
-        margin-left: 80px;
-      }
+      .card:nth-child(4) { margin-left: 80px;}
+      .card:nth-child(7) { margin-left: 40px;}
+      .card:nth-child(10) { margin-left: -20px;}
       .card:hover {
         background: rgba(255,255,255,0.4);
         transform: translate3d(-6px, -6px, 0px);
@@ -63,6 +63,15 @@
     <h1 class="title">Diagonal Card</h1>
     <div class="container">
       <div class="diagonal">
+        <article class="card">
+          <h1>sample</h1>
+        </article>
+        <article class="card">
+          <h1>sample</h1>
+        </article>
+        <article class="card">
+          <h1>sample</h1>
+        </article>
         <article class="card">
           <h1>sample</h1>
         </article>
